# pharo-infer

./: .gitignore  .smalltalk.ston  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: CI.yml  Release.yml  auto-relase.yml  auto-release.yml
docs/: index.md
native/: CMakeLists.txt  ai_llama_shim.c
scripts/: build-native.sh
src/AI-PharoInfer/: AIBackend.class.st  AIChatAPI.class.st  AIChatCompletionRequest.class.st  AIChatCompletionResponse.class.st  AIChatMessage.class.st  AIEmbeddingsGenerator.class.st  AIGGUFParser.class.st  AIGenerationOptions.class.st  AIInferenceConfig.class.st  AIInferenceEngine.class.st  AILlamaBatch.class.st  AILlamaContextParams.class.st  AILlamaCppBackend.class.st  AILlamaLibrary.class.st  AILlamaModelParams.class.st  AILlamaSamplerChainParams.class.st  AILocalBackend.class.st  AILocalModelHandle.class.st  AIModel.class.st  AIModelFormat.class.st  AIModelManager.class.st  AITokenizer.class.st
src/AI-PharoInfer-Tests/: AIChatAPITest.class.st  AIConfigTest.class.st  AIEmbeddingsGeneratorTest.class.st  AIGenerationOptionsTest.class.st  AIInferenceEngineTest.class.st  AIIntegrationTest.class.st  AILlamaLibraryTest.class.st  AIMockBackend.class.st  AIModelFormatTest.class.st  AIModelManagerTest.class.st  AIModelTest.class.st  AITokenizerTest.class.st  package.st
